--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "next-js-condensed",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "next.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "sarantuya",
-  "license": "ISC",
-  "devDependencies": {
-    "nextjs": "0.0.3"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "12.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-elastic-carousel": "^0.11.5",
+    "reactstrap": "^9.0.0",
+    "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "eslint": "7.32.0",
+    "eslint-config-next": "12.0.2"
   }
 }
