--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-hook-form": "^7.27.1",
     "reactstrap": "^9.0.0",
     "styled-components": "^5.3.3"
   },
